# pacdef

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  config.toml  example_config.toml  stderr
.github/workflows/: check.yml  ci.yml  test.yaml
crates/pacdef/: Cargo.toml
crates/pacdef/src/backend/: todo_per_backend.rs
crates/pacdef/src/grouping/: package.rs
crates/pacdef/src/review/: datastructures.rs  mod.rs  tui.rs
groups/: example_group.toml
src/: cli.rs  cmd.rs  config.rs  core.rs  groups.rs  lib.rs  main.rs  packages.rs  prelude.rs
src/backend/: any.rs  apt.rs  arch.rs  cargo.rs  dnf.rs  flatpak.rs  mod.rs  pacman.rs  paru.rs  pip.rs  pipx.rs  rustup.rs  xbps.rs  yay.rs
src/backends/: all.rs  any.rs  apt.rs  arch.rs  cargo.rs  dnf.rs  flatpak.rs  mod.rs  pacman.rs  paru.rs  pip.rs  pipx.rs  rustup.rs  xbps.rs  yay.rs
src/review/: mod.rs
tests/: cli_tests.rs
