[package]
name = "pacdef"
description = "multi-backend declarative package manager for Linux"
version = "1.6.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/steven-omaha/pacdef"
readme = "README.md"
keywords = ["package-manager", "linux", "declarative", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.78"

[dependencies]
color-eyre = "0.6.3"
clap = { version = "4.5.18", features = ["derive"] }
regex = { version = "1.10.6", default-features = false, features = ["std"] }
libc = "0.2.159"
log = { version = "0.4.22", features = ["std"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
derive_more = {version = "1.0.0", features = ["full"]}
itertools = "0.13.0"
dirs = "5.0.1"
home = "0.5.9"
pretty_env_logger = "0.5.0"
dialoguer = "0.11.0"
strum = { version = "0.26.3", features = ["derive"] }
serde-inline-default = "0.2.1"
hostname = "0.4.0"

[dev-dependencies]
assert_cmd = "2.0.16"
