[package]
name = "metapac"
description = "multi-backend declarative package manager"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ripytide/metapac"
readme = "README.md"
keywords = ["package-manager", "linux", "declarative", "cli"]
categories = ["command-line-utilities", "package-managers"]
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
color-eyre = "0.6.3"
clap = { version = "4.5.20", features = ["derive"] }
regex = { version = "1.11.0", default-features = false, features = ["std"] }
libc = "0.2.161"
log = { version = "0.4.22", features = ["std"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
toml = "0.8.19"
derive_more = { version = "1.0.0", features = ["full"] }
itertools = "0.13.0"
dirs = "5.0.1"
home = "0.5.9"
pretty_env_logger = "0.5.0"
dialoguer = "0.11.0"
serde-inline-default = "0.2.2"
hostname = "0.4.0"
walkdir = "2.5.0"
toml_edit = "0.22.22"

[dev-dependencies]
assert_cmd = "2.0.16"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
